pkg/lang/testdata/ub/file/factory/invalid/call-in-nested-expression.ub
imports: { core: 'github.com/x/core' }
resources: {
  core.thing.one: { name: lib.upper('hi') }
}
